--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -97,20 +97,20 @@ The rest of the paper is organised as follows.
 and states the properties of well-typed processes that we formalise and prove,
 namely typing preservation, deadlock freedom and runtime safety.
 %
-\Cref{sec:agda} presents a roadmap of the Agda formalisation and discusses its
-key aspects with particular emphasis on the representation of channel names and
-of typing contexts. We assume that the reader is somewhat knowledgeable about
-Agda, but we also recall a few key definitions from Agda's standard library.
+\Cref{sec:agda} presents the Agda formalisation and illustrates its key aspects
+with particular emphasis on the representation of channels and of typing
+contexts. We assume that the reader is somewhat familiar about Agda, but we also
+recall a few key definitions from Agda's standard library.
 %
 % \Cref{sec:examples} illustrates some examples of \LCP processes as they are
 % represented in Agda and shows how to use Agda as an interpreter for \LCP.
 %
 \Cref{sec:related} discusses related work more in detail by providing a
 qualitative and quantitative comparison between the known formalisations of
-session/linear calculi, including the one for \LCP.
+session/linear calculi.
 %
-\Cref{sec:conclusion} summarises our contributions and discusses some ongoing
-and future work.
+\Cref{sec:conclusion} summarises our contributions and discusses ongoing and
+future work.
 
 The formalisation has been carried out using Agda and the source code is
 available on GitHub at
