--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -68,8 +68,8 @@ clearly undesirable since it does not correspond to a useful pattern of
 interaction (every meaningful session requires its endpoints to be used by
 parallel processes) and is a potential source of deadlocks.
 %
-From the standpoint of the formalisation, where the representation of channel
-names is a primary design choice, it spares us the need to distinguish the two
+From the standpoint of the formalisation, where the representation of channels
+is a primary design choice, it spares us the need to distinguish the two
 endpoints of a session, \eg by means of
 polarities~\citep{GayHole05,ZalakainDardha21} or by using different names
 connected by the same binder~\citep{Vasconcelos12,GayVasconcelos25}.
