--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -99,8 +99,8 @@ namely typing preservation, deadlock freedom and runtime safety.
 %
 \Cref{sec:agda} presents the Agda formalisation and illustrates its key aspects
 with particular emphasis on the representation of channels and of typing
-contexts. We assume that the reader is somewhat familiar about Agda, but we also
-recall a few key definitions from Agda's standard library.
+contexts. We assume that the reader is somewhat familiar about Agda but we
+recall the lesser known definitions from Agda's standard library.
 %
 % \Cref{sec:examples} illustrates some examples of \LCP processes as they are
 % represented in Agda and shows how to use Agda as an interpreter for \LCP.
@@ -112,7 +112,6 @@ session/linear calculi.
 \Cref{sec:conclusion} summarises our contributions and discusses ongoing and
 future work.
 
-The formalisation has been carried out using Agda and the source code is
-available on GitHub at
-\url{https://github.com/boystrange/LinearityChallenge/tree/main/lcp}.
+The formalisation has been checked with Agda 2.8.0 and the source code is on
+GitHub at \url{https://github.com/boystrange/LinearityChallenge/tree/main/lcp}.
 
