--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -59,8 +59,8 @@ $\pi$-calculus~\citep{KobayashiPierceTurner99,Kobayashi02b,DardhaGiachinoSangior
 Overall, \LCP is a linear version of \CP~\cite{Wadler14} in which sessions are
 encodable instead of being featured natively.
 
-The logical foundations of \LCP and its use of explicit continuations play an
-important role in taming the complexity of its formalisation.
+The logical foundations of \LCP and the use of explicit continuations play an
+important role in taming the complexity of the formalisation.
 %
 Using a calculus based on linear logic prevents \emph{by construction} the same
 (sequential) process to own both endpoints of a session. This situation is
